2010-06-08  Tony Chang  <tony@chromium.org>

        Not reviewed, build fix.

        [chromium] fix linux compile
        https://bugs.webkit.org/show_bug.cgi?id=40343

        * DEPS:

2010-06-08  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: extend ScriptDebugServer to support script source editing
        https://bugs.webkit.org/show_bug.cgi?id=40297

        * src/js/DebuggerAgent.js:
        (devtools.ScriptInfo.prototype.worldType):
        * src/js/DebuggerScript.js:
        (debuggerScriptConstructor.DebuggerScript.editScriptSource):
        * src/js/DevTools.js:
        (WebInspector.loaded):
        * src/js/InspectorControllerImpl.js:
        (devtools.InspectorBackendImpl):

2010-06-08  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Ojan Vafai and Darin Adler.

        Refactor platform dependent editing behavior code out of Settings
        https://bugs.webkit.org/show_bug.cgi?id=39854

        EditingBehavior enum was renamed to EditingBehaviorTypes and moved out from Settings.h to
        EditingBehaviorTypes.h . Call sites in WebKit/ adjusted accordingly.

        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setEditingBehavior):

2010-06-07  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] roll chromium DEPS
        https://bugs.webkit.org/show_bug.cgi?id=40277

        * DEPS:

2010-06-07  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Jian Li.

        Refactor FormData and Blob for better support of Blobs synthesized by BlobBuilder.
        https://bugs.webkit.org/show_bug.cgi?id=39083

        Replace FormDataList::Item list with BlobItemList to get it compiled
        with the refactoring in FormDataList.

        * src/WebSearchableFormData.cpp:
        (WebCore::HasSuitableTextElement):

2010-06-07  Andrei Popescu  <andreip@google.com>

        Reviewed by Jeremy Orlow.
