@@ -1434,16 +1434,15 @@ sub buildGtkProject($$@)
     return buildAutotoolsProject($clean, @buildArgs);
 }
 
-sub buildChromiumMakefile($$$)
+sub buildChromiumMakefile($$)
 {
-    my ($dir, $target, $clean) = @_;
-    chdir $dir;
+    my ($target, $clean) = @_;
     if ($clean) {
         return system qw(rm -rf out);
     }
     my $config = configuration();
     my $numCpus = (grep /processor/, `cat /proc/cpuinfo`) || 1;
-    my @command = ("make", "-j$numCpus", "BUILDTYPE=$config", $target);
+    my @command = ("make", "-fMakefile.chromium", "-j$numCpus", "BUILDTYPE=$config", $target);
     print join(" ", @command) . "\n";
     return system @command;
 }
@@ -1501,7 +1500,7 @@ sub buildChromium($@)
         $result = buildChromiumVisualStudioProject("WebKit/chromium/WebKit.sln", $clean);
     } elsif (isLinux()) {
         # Linux build - build using make.
-        $ result = buildChromiumMakefile("WebKit/chromium/", "all", $clean);
+        $ result = buildChromiumMakefile("all", $clean);
     } else {
         print STDERR "This platform is not supported by chromium.\n";
     }
