@@ -1,5 +1,14 @@
 2010-06-08  Tony Chang  <tony@chromium.org>
 
+        Reviewed by David Levin.
+
+        [chromium] compile linux chromium in WebKit/out instead of WebKit/WebKit/chromium/out
+        https://bugs.webkit.org/show_bug.cgi?id=40285
+
+        * gyp_webkit:
+
+2010-06-08  Tony Chang  <tony@chromium.org>
+
         Not reviewed, build fix.
 
         [chromium] fix linux compile
@@ -35,7 +44,6 @@
 
         * src/WebSettingsImpl.cpp:
         (WebKit::WebSettingsImpl::setEditingBehavior):
-
 2010-06-07  Tony Chang  <tony@chromium.org>
 
         Reviewed by Kent Tamura.
